--- a/WebUniversity/Views/Course/Details.cshtml
+++ b/WebUniversity/Views/Course/Details.cshtml
@@ -23,10 +23,10 @@
             @Html.DisplayFor(model => model.Credits)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Department)
+            @Html.DisplayNameFor(model => model.Department.Name)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Department.DepartmentID)
+            @Html.DisplayFor(model => model.Department.Name)
         </dd>
     </dl>
 </div>
